# py-stock

./: .gitignore  CLAUDE.md  README.md  coverage.json  main.py  pyproject.toml  requirements.txt  予定表.md
.claude/commands/: ci-fix.md  feat.md  test-coverage.md
.github/: dependabot.yml
.github/scripts/: coverage_comment.py
.github/workflows/: claude.yml  tests.yml  update-coverage-badge.yml
cache/backups/: backup_metadata.json
config/: settings.json
dashboard/: app.py  requirements.txt
dashboard/components/: __init__.py  alerts.py  backtest.py  charts.py  education_cases.py  education_glossary.py  education_simulation.py  education_tutorial.py  fundamental_analysis.py  intelligent_alerts.py  investment_story.py  market_environment.py  news_sentiment.py  performance_tracking.py  portfolio_analysis.py  signals.py  tax_calculation.py  watchlist.py
dashboard/data/: __init__.py  signal_storage.py
dashboard/utils/: dashboard_utils.py
docs/: MCP_ARCHITECTURE.md  README.md  mcp-setup.md  pandas_2.3.0_compatibility_report.md  setup.md  troubleshooting.md  usage.md  必要機能リスト.md
docs/prompts/: 1.md
docs/testing/: README.md  coverage_analysis_report.md  coverage_analyzer.py  coverage_data.json  coverage_difficulty_analysis.md  coverage_improvement_guide.md
mcp-servers/news-analysis/: README.md  package.json  tsconfig.json
mcp-servers/news-analysis/src/: index.ts
mcp-servers/news-analysis/src/services/: importance-scorer.ts  news-collector.ts  sentiment-analyzer.ts
mcp-servers/stock-data/: README.md  package.json
mcp-servers/stock-data/src/: index.ts
mcp-servers/stock-data/src/services/: cache-manager.ts  rate-limiter.ts  stock-data-service.ts  symbol-validator.ts
scripts/: update_coverage_badge.py
src/config/: settings.py
src/data_collector/: backup_manager.py  stock_data_collector.py  symbol_manager.py  watchlist_storage.py
src/examples/: basic_usage.py  intelligent_alert_demo.py  risk_management_demo.py  signal_generator_demo.py  support_resistance_demo.py  technical_analysis_demo.py
src/performance_tracking/: __init__.py  improvement_suggestions.py  pattern_analyzer.py  performance_tracker.py  tendency_analyzer.py  trade_history_manager.py
src/risk_management/: __init__.py  portfolio_analyzer.py  risk_manager.py
src/tax_calculation/: __init__.py  fee_calculator.py  nisa_manager.py  profit_loss_simulator.py  tax_calculator.py
src/technical_analysis/: fundamental_analysis.py  fundamental_visualization.py  indicators.py  integrated_analysis.py  intelligent_alert_system.py  investment_story_generator.py  market_environment.py  signal_generator.py  support_resistance.py
src/utils/: coverage_badge_generator.py  data_validator.py
tests/: conftest.py  test_backup_manager.py  test_risk_manager.py  test_signal_generator.py  test_technical_indicators.py
tests/integration/: test_intelligent_alert_integration.py
tests/unit/: conftest.py  test_backup_manager.py  test_coverage_badge_generator.py  test_data_validator.py  test_education_components.py  test_education_simulation_value_calculation.py  test_examples.py  test_fee_calculator.py  test_fundamental_analysis.py  test_fundamental_analysis_dashboard.py  test_fundamental_visualization.py  test_improvement_suggestions.py  test_improvement_suggestions_advanced.py  test_improvement_suggestions_final.py  test_integrated_analysis.py  test_intelligent_alert_component.py  test_intelligent_alert_system.py  test_investment_story_generator.py  test_market_environment.py  test_market_environment_dashboard_component.py  test_news_analysis.py  test_news_analysis_core.py  test_nisa_manager.py  test_pattern_analyzer.py  test_performance_tracker.py  test_portfolio_analyzer.py  test_profit_loss_simulator.py  test_risk_management_init.py  test_risk_manager.py  test_settings.py  test_signal_generator.py  test_stock_data_collector.py  test_stock_data_collector_dividends.py  test_support_resistance.py  test_symbol_manager.py  test_symbol_manager_indices.py  test_tax_calculator.py  test_technical_indicators.py  test_tendency_analyzer.py  test_trade_history_manager.py  (+1 more)
